--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;0,900;1,200;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
         <title>Camila Falaschi Ide</title>
         <div id="header">
-            <h1 id="inicio">Camila Falaschi Ide</h1>
+            <h1 id="nome">Camila Falaschi Ide</h1>
             <div>    
                 <img id="fotoperfil" src="images/foto2.jpeg" alt="foto de perfil da camila usando uma blusa preta, oculos, headset e cabelo preso.">
-                <p>
+                <p id="description">
                 Olá me chamo <strong>Camila</strong>, e sou ítala-brasileira residente de Guarulhos, São Paulo. <br>
                 Atualmente sou estudante de desenvolvimento Web na <strong>Trybe</strong>.
                 Antes de iniciar esse curso, eu havia estudado informática no ensino médio e desenvolvido um projeto extracurricular com a tecnologia Arduino, ganhador do prêmio de Educação Básica. <br>Uma das coisas que mais gosto nessa área é imaginar algo e conseguir recriar aquilo utilizando a programação.
@@ -25,7 +27,6 @@
             <h2>Índice</h2>
             <p>
                 <ul>
-                    <li> <a href="#inicio">Sobre mim</a></li>
                     <li> <a href="#habilit">Habilidades</a></li>
                     <li> <a href="#recomend">Recomendações</a></li>
                 </ul>
