--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div>    
                 <img id="fotoperfil" src="images/foto2.jpeg" alt="foto de perfil da camila usando uma blusa preta, oculos, headset e cabelo preso.">
                 <p id="description">
-                Olá me chamo <strong>Camila</strong>, e sou ítala-brasileira residente de Guarulhos, São Paulo. <br>
-                Atualmente sou estudante de desenvolvimento Web na <strong>Trybe</strong>.
+                Olá! Me chamo <span class="letter">Camila</span>, e sou ítala-brasileira residente de Guarulhos, São Paulo. <br>
+                Atualmente sou estudante de desenvolvimento Web na <span class="letter">Trybe</span>.
                 Antes de iniciar esse curso, eu havia estudado informática no ensino médio e desenvolvido um projeto extracurricular com a tecnologia Arduino, ganhador do prêmio de Educação Básica. <br>Uma das coisas que mais gosto nessa área é imaginar algo e conseguir recriar aquilo utilizando a programação.
                 <br>Gosto de ler livros, desenhar e criar designs que instiguem a minha imaginação e criatividade.
                 <br>E planejo em um dia me tornar hiperpoliglota.
@@ -32,15 +32,17 @@
                 </ul>
             </p>
         </div>
-        <div>
-            <h2 id="habilit">Habilidades</h2>
-            <p>
-                <ul>
-                    <li class="html">HTML</li>
-                    <li class="css">CSS</li>
-                    <li class="ingles">Inglês</li>
-                </ul>
-            </p>
+        <div class="block">
+            <div>
+                <h2 id="habilit">Habilidades</h2>
+                <div class="text">
+                    <ul>
+                        <li class="html">HTML</li>
+                        <li class="css">CSS</li>
+                        <li class="ingles">Inglês</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div>
             <h2 id="recomend">Recomendações</h2>
