adicionando bloco no fim da página

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
                 </p>
             </div>
         </div>    
-        <div>
+        <div id="indice">
             <h2>Índice</h2>
             <p>
                 <ul>
                     <li> <a href="#habilit">Habilidades</a></li>
                     <li> <a href="#recomend">Recomendações</a></li>
+                    <li> <a href="#contato">Contato</a></li>
                 </ul>
             </p>
         </div>
@@ -44,9 +45,18 @@
                 </div>
             </div>
         </div>
-        <div>
-            <h2 id="recomend">Recomendações</h2>
-            <p>Um site que eu utilizo muito e recomendo é o <a href="https://www.canva.com/pt_br/q/pro/?utm_source=google_sem&utm_medium=cpc&utm_campaign=REV_BR_PT_CanvaPro_Branded_EM&utm_term=REV_BR_PT_CanvaPro_Branded_Canva_EM&utm_content=357_control&gclid=CjwKCAjwi6WSBhA-EiwA6Niok9fhthh0TI4Fz78H2ikjbaVcvdHv4odqDAYMFdYbiDmxtW32fqhl-BoC1iAQAvD_BwE&gclsrc=aw.ds" class="linkcanva" target="_blank">Canva.com</a>, pois nele temos uma ferramenta incrível que nos permite criar designs de modo intuitivo e simples.</p>
+        <div class="endblock">
+            <div class="endpart">
+                <h2 id="recomend">Recomendações</h2>
+                <p>Um site que eu utilizo muito e recomendo é o <a href="https://www.canva.com/pt_br/q/pro/?utm_source=google_sem&utm_medium=cpc&utm_campaign=REV_BR_PT_CanvaPro_Branded_EM&utm_term=REV_BR_PT_CanvaPro_Branded_Canva_EM&utm_content=357_control&gclid=CjwKCAjwi6WSBhA-EiwA6Niok9fhthh0TI4Fz78H2ikjbaVcvdHv4odqDAYMFdYbiDmxtW32fqhl-BoC1iAQAvD_BwE&gclsrc=aw.ds" class="linkcanva" target="_blank">Canva.com</a>, pois nele temos uma ferramenta incrível que nos permite criar designs de modo intuitivo e simples.</p>
+            </div>
+            <div class="endpart">
+                <h2 id="contato">Contato</h2>
+                <div class="icon">
+                    <a href="https://github.com/Camila-Falaschi" target="_blank"><img id="github" src="images/github.png" alt="Icone de redirecionamento para o perfil da Camila no github."></a>
+                    <a href="https://www.linkedin.com/in/camila-falaschi-41a29a1a4/" target="_blank"><img id="linkedin" src="images/linkedin.png" alt="Icone de redirecionamento para o perfil da Camila no LinkedIn."></a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
