--- a/index.html
+++ b/index.html
@@ -1,62 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;0,900;1,200;1,700;1,900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <title>Camila Falaschi Ide</title>
-        <div id="header">
-            <h1 id="nome">Camila Falaschi Ide</h1>
-            <div>    
-                <img id="fotoperfil" src="images/foto2.jpeg" alt="foto de perfil da camila usando uma blusa preta, oculos, headset e cabelo preso.">
-                <p id="description">
-                Olá! Me chamo <span class="letter">Camila</span>, e sou ítala-brasileira residente de Guarulhos, São Paulo. <br>
-                Atualmente sou estudante de desenvolvimento Web na <span class="letter">Trybe</span>.
-                Antes de iniciar esse curso, eu havia estudado informática no ensino médio e desenvolvido um projeto extracurricular com a tecnologia Arduino, ganhador do prêmio de Educação Básica. <br>Uma das coisas que mais gosto nessa área é imaginar algo e conseguir recriar aquilo utilizando a programação.
-                <br>Gosto de ler livros, desenhar e criar designs que instiguem a minha imaginação e criatividade.
-                <br>E planejo em um dia me tornar hiperpoliglota.
-                </p>
-            </div>
-        </div>    
-        <div id="indice">
-            <h2>Índice</h2>
-            <p>
-                <ul>
-                    <li> <a href="#habilit">Habilidades</a></li>
-                    <li> <a href="#recomend">Recomendações</a></li>
-                    <li> <a href="#contato">Contato</a></li>
-                </ul>
-            </p>
-        </div>
-        <div class="block">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;0,900;1,200;1,700;1,900&display=swap" rel="stylesheet" />
+  </head>
+  <body>
+    <main>
+      <div class="card">
+        <section class="description">
+          <h1>Hi! I'm Camila.</h1>
+          <p>If you want to know more about me, check my LinkedIn profile.</p>
+          <p>Or you can see some of my projects on GitHub.</p>
+        </section>
+        <section class="links-icon">
+          <a href="https://www.linkedin.com/in/camila-falaschi/" target="_blank">
             <div>
-                <h2 id="habilit">Habilidades</h2>
-                <div class="text">
-                    <ul>
-                        <li class="html">HTML</li>
-                        <li class="css">CSS</li>
-                        <li class="ingles">Inglês</li>
-                    </ul>
-                </div>
+              <img id="linkedin" src="images/linkedin.png" alt="Link to redirect to LinkedIn profile" />
             </div>
-        </div>
-        <div class="endblock">
-            <div class="endpart">
-                <h2 id="recomend">Recomendações</h2>
-                <p>Um site que eu utilizo muito e recomendo é o <a href="https://www.canva.com/pt_br/q/pro/?utm_source=google_sem&utm_medium=cpc&utm_campaign=REV_BR_PT_CanvaPro_Branded_EM&utm_term=REV_BR_PT_CanvaPro_Branded_Canva_EM&utm_content=357_control&gclid=CjwKCAjwi6WSBhA-EiwA6Niok9fhthh0TI4Fz78H2ikjbaVcvdHv4odqDAYMFdYbiDmxtW32fqhl-BoC1iAQAvD_BwE&gclsrc=aw.ds" class="linkcanva" target="_blank">Canva.com</a>, pois nele temos uma ferramenta incrível que nos permite criar designs de modo intuitivo e simples.</p>
+          </a>
+          <a href="https://github.com/Camila-Falaschi" target="_blank">
+            <div>
+              <img id="github" src="images/github.png" alt="Link to redirect to GitHub profile." />
             </div>
-            <div class="endpart">
-                <h2 id="contato">Contato</h2>
-                <div class="icon">
-                    <a href="https://github.com/Camila-Falaschi" target="_blank"><img id="github" src="images/github.png" alt="Icone de redirecionamento para o perfil da Camila no github."></a>
-                    <a href="https://www.linkedin.com/in/camila-falaschi-41a29a1a4/" target="_blank"><img id="linkedin" src="images/linkedin.png" alt="Icone de redirecionamento para o perfil da Camila no LinkedIn."></a>
-                </div>
-            </div>
-        </div>
-    </body>
+          </a>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
